--- a/SI_Format/SI_Format.csproj
+++ b/SI_Format/SI_Format.csproj
@@ -48,10 +48,6 @@ Some physical constants are provided for C# use.    </Description>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Readme.md" />
-  </ItemGroup>
-
-  <ItemGroup>
     <Folder Include="Properties\" />
   </ItemGroup>
   
@@ -70,12 +66,9 @@ Some physical constants are provided for C# use.    </Description>
   </ItemGroup>
 
   <ItemGroup>
-    <Resource Include="Readme.md">
+    <None Update="Readme.md">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Resource>
-  </ItemGroup>
-
-  <ItemGroup>
+    </None>
     <None Update="SI_Format.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
